samples/_failures_safe/1761531571_2a7320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afb086f1.c: In function ‘main’:
./samples/SAFE/__tmp_afb086f1.c:168:9: error: expected declaration or statement at end of input
  168 |         }
      |         ^
./samples/SAFE/__tmp_afb086f1.c:168:9: error: expected declaration or statement at end of input
